--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.profiles.active=dev
 logging.config = classpath:slf4j.xml
 
 ################## 主环境MySQL配置 ##################
-spring.datasource.url=jdbc:mysql://127.0.0.3306/shopping_mall?serverTimezone=Asia/Shanghai
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/shopping_mall?serverTimezone=Asia/Shanghai
 spring.datasource.username=root
 spring.datasource.password=
 # 最大空闲连接数量
@@ -36,3 +36,8 @@ wechat.miniapp.secret=423e69c18d77ca8e15a2fd73432ff8bd
 
 # 自定义token密钥
 token.secret=S9LYUl73fquXIRCosFHyVKY9HUKAlT7O
+
+
+################    Cache配置    ################
+spring.cache.type=redis
+spring.cache.cache-names=MyCache
