新增redis消息监听

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -34,9 +34,14 @@ spring.redis.port=6379
 spring.redis.password=
 spring.redis.lettuce.pool.min-idle=10
 spring.redis.lettuce.pool.max-active=100
-spring.redis.lettuce.pool.max-idle=10
+spring.redis.lettuce.pool.max-idle=50
 spring.redis.lettuce.pool.max-wait=10000
 spring.redis.timeout=30
+
+# 商户后台订阅的redis主题
+merchants_listener_topic=merchants_listener
+# 小程序后台订阅的主题
+miniapp_listener_topic=miniapp_listener
 
 # 小程序appid和secret
 wechat.miniapp.appid=wx59464f3fd1a7808a
@@ -44,7 +49,6 @@ wechat.miniapp.secret=423e69c18d77ca8e15a2fd73432ff8bd
 
 # 自定义token密钥
 token.secret=S9LYUl73fquXIRCosFHyVKY9HUKAlT7O
-
 
 ################    Cache配置    ################
 spring.cache.type=redis
