修改redis消息通信方式

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -38,17 +38,17 @@ spring.redis.lettuce.pool.max-idle=50
 spring.redis.lettuce.pool.max-wait=10000
 spring.redis.timeout=30
 
-# 商户后台订阅的redis主题
+# merchants_listener_topic用于通知商户后端接收新消息， merchants_message_queue作为商户后端消息队列
 merchants_listener_topic=merchants_listener
-# 小程序后台订阅的主题
+merchants_message_queue=merchants_message_queue
+
+# miniapp_listener_topic用于通知小程序后端接收新消息， miniapp_message_queue作为小程序后端消息队列
 miniapp_listener_topic=miniapp_listener
+miniapp_message_queue=miniapp_message_queue
 
 # 小程序appid和secret
 wechat.miniapp.appid=wx59464f3fd1a7808a
 wechat.miniapp.secret=423e69c18d77ca8e15a2fd73432ff8bd
-
-# 自定义token密钥
-token.secret=S9LYUl73fquXIRCosFHyVKY9HUKAlT7O
 
 ################    Cache配置    ################
 spring.cache.type=redis
