完善特价活动专区功能

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,6 +11,9 @@ spring.thymeleaf.mode=HTML5
 # 日志配置
 logging.config = classpath:slf4j.xml
 
+spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
+spring.jackson.time-zone=GMT+8
+
 ################## 主环境MySQL配置 ##################
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/shopping_mall?serverTimezone=Asia/Shanghai
 spring.datasource.username=root
