新增监服务控功能

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,9 +8,13 @@ spring.thymeleaf.encoding=UTF-8
 spring.thymeleaf.servlet.content-type=text/html
 spring.thymeleaf.mode=HTML5
 
+# 暴露全部监控端点
+management.endpoints.web.exposure.include=*
+
 # 日志配置
 logging.config = classpath:slf4j.xml
 
+# 日期格式
 spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
 spring.jackson.time-zone=GMT+8
 
